fixes letter-spacing

--- a/source/sass/blocks/about-us.scss
+++ b/source/sass/blocks/about-us.scss
@@ -33,7 +33,6 @@
   @media (min-width: $desktop-width) {
     font-size: 53px;
     line-height: 1.08;
-    letter-spacing: -0.01em;
   }
 }
 
