--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -170,7 +170,6 @@
   }
 
   @media (min-width: $desktop-width) {
-    letter-spacing: 0.01em;
     margin: 0;
     padding: 25px 0 5px 0;
   }
