--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -77,7 +77,6 @@
     width: 770px;
     margin-bottom: 38px;
     line-height: 1.83;
-    // letter-spacing: -0.03em;
   }
 }
 
@@ -103,7 +102,6 @@
   @media (min-width: $desktop-width) {
     font-size: 18px;
     line-height: 1.33;
-    letter-spacing: -0.03em;
   }
 }
 
